--- a/recipes/bio-vcf/meta.yaml
+++ b/recipes/bio-vcf/meta.yaml
@@ -18,4 +18,4 @@ test:
 about:
   home: https://github.com/pjotrp/bioruby-vcf
   license: MIT
-  summary: Smart VCF parser test
+  summary: Smart VCF parser
